Website update during Meeting

--- a/Materials Page/BEGINNER.html
+++ b/Materials Page/BEGINNER.html
@@ -14,7 +14,7 @@
     <nav class="navbar">
         <!-- Logo Section -->
         <a href="/4CADs.html"><div class="logo"><img src="/Images/Navlogo.png" alt="Logo" id="Logo-img"></div></a>
-        <div class="divabout"><a class="aboutus" href="/About_us.html">About Us</a></div>
+        <div class="divabout"><a class="aboutus" href="/About_us.html" style="font-size: medium;">About Us</a></div>
         <!--Search Section-->
         <div class="search-container">
             <input type="text" placeholder="Search Materials..." class="search-bar">
@@ -64,21 +64,22 @@
     </style>
 
 <div class="card-container">
+    <a href="/Materials Page/Material Content/Pinewood.html">
 <div class="card" >
-    <a href="/Materials Page/Material Content/Pinewood.html"></a>
+    
     <div class="card-background" style=" background-image: url('../Images/Pinewood.png');"></div>
     <div class="card-content">
         <div class="card-title">PINEWOOD</div>
-        <div class="card-description">
-            Learn about the properties and uses of pinewood materials.
+        <div class="card-description" style="display: flex; font-size:medium; align-items: center; justify-content: center;">
+            Lightweight, Soft, Thermal insulator
         </div>
     </div>
-</div>
+</div></a>
 <div class="card" >
     <a href="/Materials Page/Material Content/Pinewood.html"></a>
     <div class="card-background"  style=" background-image: url('../Images/Textile.png');"></div>
     <div class="card-content">
-        <div class="card-title">PINEWOOD</div>
+        <div class="card-title">TEXTILE</div>
         <div class="card-description">
             Learn about the properties and uses of pinewood materials.
         </div>
@@ -88,7 +89,7 @@
     <a href="/Materials Page/Material Content/Pinewood.html"></a>
     <div class="card-background"  style=" background-image: url('../Images/Rubber.png');"></div>
     <div class="card-content">
-        <div class="card-title">PINEWOOD</div>
+        <div class="card-title">RUBBER</div>
         <div class="card-description">
             Learn about the properties and uses of pinewood materials.
         </div>
@@ -98,7 +99,7 @@
     <a href="/Materials Page/Material Content/Pinewood.html"></a>
     <div class="card-background"  style=" background-image: url('../Images/Cardboard.png');"></div>
     <div class="card-content">
-        <div class="card-title">PINEWOOD</div>
+        <div class="card-title">CARDBOARD</div>
         <div class="card-description">
             Learn about the properties and uses of pinewood materials.
         </div>
@@ -109,7 +110,7 @@
     <a href="/Materials Page/Material Content/Pinewood.html"></a>
     <div class="card-background"  style=" background-image: url('../Images/Bamboo.png');"></div>
     <div class="card-content">
-        <div class="card-title">PINEWOOD</div>
+        <div class="card-title">BAMBOO</div>
         <div class="card-description">
             Learn about the properties and uses of pinewood materials.
         </div>
@@ -119,7 +120,7 @@
     <a href="/Materials Page/Material Content/Pinewood.html"></a>
     <div class="card-background"  style=" background-image: url('../Images/Cork.png');"></div>
     <div class="card-content">
-        <div class="card-title">PINEWOOD</div>
+        <div class="card-title">CORK</div>
         <div class="card-description">
             Learn about the properties and uses of pinewood materials.
         </div>
@@ -129,7 +130,7 @@
     <a href="/Materials Page/Material Content/Pinewood.html"></a>
     <div class="card-background"  style=" background-image: url('../Images/Clay.png');"></div>
     <div class="card-content">
-        <div class="card-title">PINEWOOD</div>
+        <div class="card-title">CLAY</div>
         <div class="card-description">
             Learn about the properties and uses of pinewood materials.
         </div>
@@ -140,7 +141,7 @@
     <a href="/Materials Page/Material Content/Pinewood.html"></a>
     <div class="card-background"  style=" background-image: url('../Images/Basswood.png');"></div>
     <div class="card-content">
-        <div class="card-title">PINEWOOD</div>
+        <div class="card-title">BASSWOOD</div>
         <div class="card-description">
             Learn about the properties and uses of pinewood materials.
         </div>
@@ -213,7 +214,6 @@
                 align-items: center;
                 justify-content: center;
                 color: #ffffff;
-                font-weight:lighter;
                 font-family: sans-serif;
                 font-size: medium;
                 transition: 0.5s ease;
@@ -222,7 +222,6 @@
                 background-color: #6d6a39;
                 opacity: 0.8;
                 border-radius: 12px;
-                font-weight: bolder;
                 width: 100px; height: 20px;
                 transition: all ease 0.3;
             }
