--- a/Materials Page/Material Content/Pinewood.html
+++ b/Materials Page/Material Content/Pinewood.html
@@ -31,8 +31,8 @@
     </nav>
     <section id=topics  style="padding-top: 14vb;">
         <div  class="text-center sticky-title p-2 text-black  text-center py-1 position-fixed"  
-        style="background-color: rgba(211, 209, 175); z-index: 1; top: 60px; z-index: 4;">
-            <h2 class="display-5 fw-normal" >PINE WOOD</h2> 
+        style="background-color: #c3a170; z-index: 1; top: 60px; z-index: 4;">
+            <h2 class="display-5 " style="font-weight:600; color: rgb(54, 54, 54);">PINE WOOD</h2> 
         </div>
         <!--Everything below header-->
         <div style="z-index: -1;">
@@ -62,13 +62,13 @@
 
                 <!-- accordions  -->
                 <!-- applications -->
-                <div class="accordion" id="chapters">
+                <div class="accordion" id="chapters" style="z-index: 0;">
                     <div class="accordion-item">
                         <h2 class="accordion-header" id="heading-1">
-                            <button class="accordion-button p-4" style="background-color:#d3d1af;" type="button" data-bs-toggle="collapse"
+                            <button class="accordion-button p-4" style="background-color:#c3a170;" type="button" data-bs-toggle="collapse"
                             data-bs-target="#chapter-1" aria-expanded="true" aria-controls="chapter-1">
                             <div class="d-flex w-100 align-items-center">
-                                <h4 class="mb-0" style="color: #5f6b4c;;">Application</h4>
+                                <h4 class="mb-0" style="color: rgb(54, 54, 54);;">Application</h4>
                                 <small class="text-body-secondary ms-auto me-3 fs-6 lead">Where to use me?</small>
                               </div>                    
                             </button>
@@ -96,10 +96,10 @@
                     <!-- properties -->
                     <div class="accordion-item">
                         <h2 class="accordion-header" id="heading-2">
-                          <button class="accordion-button p-4" style="background-color:#d3d1af;" type="button" data-bs-toggle="collapse" 
+                          <button class="accordion-button p-4" style="background-color:#c3a170;" type="button" data-bs-toggle="collapse" 
                           data-bs-target="#chapter-2" aria-expanded="false" aria-controls="chapter-2">
                             <div class="d-flex w-100 align-items-center">
-                              <h4 class="mb-0" style="color:#5f6b4c;;">Properties</h4>
+                              <h4 class="mb-0" style="color: rgb(54, 54, 54);;">Properties</h4>
                               <small class="text-body-secondary ms-auto me-3 fs-6 lead">When to use me?</small>
                             </div>
                           </button>
@@ -118,10 +118,10 @@
                       <!-- Sustainability -->
                     <div class="accordion-item">
                         <h2 class="accordion-header" id="heading-3">
-                            <button class="accordion-button  p-4" style="background-color:#d3d1af;" type="button" data-bs-toggle="collapse"
+                            <button class="accordion-button  p-4" style="background-color:#c3a170;" type="button" data-bs-toggle="collapse"
                             data-bs-target="#chapter-3" aria-expanded="false" aria-controls="chapter-3">
                             <div class="d-flex w-100 align-items-center">
-                                <h4 class="mb-0" style="color:#5f6b4c;;">Sustainability</h4>
+                                <h4 class="mb-0" style="color: rgb(54, 54, 54);;">Sustainability</h4>
                                 <small class="text-body-secondary ms-auto me-3 fs-6 lead">Will I be sustainable?</small>
                               </div>
                             </button>
@@ -142,10 +142,10 @@
                     <div class="accordion-item">
                         <div class="accordion-item" id="headng-4">
                             <h2 class="accordion-header" id="heading-4">
-                                <button class="accordion-button p-4" style="background-color:#d3d1af;" type="button" data-bs-toggle="collapse"
+                                <button class="accordion-button p-4" style="background-color:#c3a170;" type="button" data-bs-toggle="collapse"
                                 data-bs-target="#chapter-4" aria-expanded="false" aria-controls="chapter-4">
                                 <div class="d-flex w-100 align-items-center">
-                                    <h4 class="mb-0" style="color:#5f6b4c;;">Manufacturers</h4>
+                                    <h4 class="mb-0" style="color: rgb(54, 54, 54);">Manufacturers</h4>
                                     <small class="text-body-secondary ms-auto me-3 fs-6 lead">Where to find me?</small>
                                   </div>  
                                 </button>
