--- a/Materials Page/BEGINNER.html
+++ b/Materials Page/BEGINNER.html
@@ -75,16 +75,20 @@
         </div>
     </div>
 </div></a>
+
+<a href="/Materials Page/Material Content/Textile.html">
 <div class="card" >
-    <a href="/Materials Page/Material Content/Pinewood.html"></a>
+    
     <div class="card-background"  style=" background-image: url('../Images/Textile.png');"></div>
     <div class="card-content">
         <div class="card-title">TEXTILE</div>
         <div class="card-description">
-            Learn about the properties and uses of pinewood materials.
+            Flexibility, Durability, water-resistant
         </div>
     </div>
 </div>
+</a>
+
 <div class="card" >
     <a href="/Materials Page/Material Content/Pinewood.html"></a>
     <div class="card-background"  style=" background-image: url('../Images/Rubber.png');"></div>
