--- a/Materials Page/BEGINNER.html
+++ b/Materials Page/BEGINNER.html
@@ -83,7 +83,7 @@
     <div class="card-content">
         <div class="card-title">TEXTILE</div>
         <div class="card-description">
-            Flexibility, Durability, water-resistant
+            Flexibility, Durability, Water-Resistant
         </div>
     </div>
 </div>
