Added images. Still working on textile header

--- a/Materials Page/Material Content/Textile.html
+++ b/Materials Page/Material Content/Textile.html
@@ -16,7 +16,7 @@
   </head>
 </head>
 <body>
-    <nav class="navbars" style=" z-index: 5;">
+    <nav class="navbars">
         <!-- Logo Section -->
         <a href="/4CADs.html"><div class="logo"><img src="/Images/Navlogo.png" alt="Logo" id="Logo-img"></div></a>
        <div class="divabout"><a class="aboutus" href="/About_us.html" style="text-decoration: none;">About Us</a></div>
@@ -30,11 +30,18 @@
         </div>
     </nav>
     <section id=topics  style="padding-top: 14vb;">
-        <div  class="text-center sticky-title p-2 text-black  text-center py-1 position-fixed"  
-        style="background-color: #b2afac; z-index: 1; position: relative; bottom: 590px; z-index: 4; ">
-        <a href="/Materials Page/BEGINNER.html"><p style="position: relative; color: rgb(54, 54, 54); right:640px; top: 55px; text-decoration: underline; color: aliceblue; font-weight: lighter;">Previous page</p></a>
-            <h2 class="display-5 " style="font-weight:600; color: rgb(54, 54, 54);">TEXTILE</h2> 
-        </div>
+        <div class="sticky-title text-center p-2 text-black position-fixed" 
+     style="background-color: #b2afac; z-index: 1; top: 40px; width: 100%;">
+  <div class="previous-link" style="text-align: left;">
+    <a href="/Materials Page/BEGINNER.html" 
+       style="text-decoration: underline; color: aliceblue; font-weight: lighter; margin-left: 20px;">
+      Previous page
+    </a>
+  </div>
+  <h2 class="display-5" style="font-weight: 600; color: rgb(54, 54, 54);">
+    TEXTILE
+  </h2>
+</div>
         <!--Everything below header-->
         <div style="z-index: -1;">
         <div class="container-md">
