INTERMEDIATE AND ADVANCED PAGES

--- a/4CADs.html
+++ b/4CADs.html
@@ -31,8 +31,8 @@
     <body class="secondbody">
         <div class="container">
             <a href="Materials Page\BEGINNER.html" > <div class="box" id="beginner"><div class="level-text"><h3>BEGINNER</h3> <br>Start here with essentials that are easy to work with</div></div></a>
-            <a href="#"><div class="box" id="intermediate"><div class="level-text"><h3>INTERMEDIATE</h3><br>Explore more options to deepen your design skills</div></div></a>
-            <a href="#"><div class="box" id="advanced"><div class="level-text"><h3>ADVANCED</h3><br>Discover expert materials to elevate your projects</div></div></a>
+            <a href="Materials Page\INTERMEDIATE.html"><div class="box" id="intermediate"><div class="level-text"><h3>INTERMEDIATE</h3><br>Explore more options to deepen your design skills</div></div></a>
+            <a href="Materials Page\ADVANCED.html"><div class="box" id="advanced"><div class="level-text"><h3>ADVANCED</h3><br>Discover expert materials to elevate your projects</div></div></a>
         </div>
         <div class="notsure"><h2>Not sure where you fall ?</h2>
         <div style=" font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;">Use our confidence scale, we'll suggest a level</div></div>
