Previous Page Button dynamic
& more

--- a/About_us.html
+++ b/About_us.html
@@ -22,15 +22,24 @@
         </div>
     </nav>
     <header>
-        <a href="/4CADs.html"><p style="position: relative; left:70px; text-decoration: underline; color: aliceblue;">Previous page</p></a>
-        <h1 id="aboutus_title"  style=" display:flex; align-items: center; justify-content: center;">About Us</h1>
+        <div class="previous-link" style="text-align: left; ">
+            <a onclick="history.back()" href="#" class="hoverprev"
+               style="text-decoration: underline; color: aliceblue; font-weight: lighter; margin-left: 60px; margin-top: 40px; display: flex; align-items: center; width: 110px; z-index: 1;">
+              Previous page
+            </a>
+            <style>
+                .hoverprev:hover{
+                    transition: all 0.3s ease;
+                transform: scale(1.1);}
+            </style>
+        <h1 id="aboutus_title"  style=" display:flex; align-items: center; justify-content: center; z-index: 50; margin-left: 20px;">About Us</h1>
     </header>
-
+    <h1 id="welcome" style="color:#6d6a39 ; font-family:sans-serif; font-size: 40px; position: relative; top: 10px;">Welcome to our About Us page</h1>
     <section class="about">
         <div class="Aboutimg">
             <div class="hcadbuilding"></div>
         </div>
-        <h1 id="welcome">Welcome to our About Us page!</h1>
+       
         <p class="Aboutp" style="word-wrap: break-word;">
            
             4CADs is a product of “4 College of Architecture and Design students”. Specifically, four students within the New Jersey Institute of Technology’s Hillier College of Architecture and Design. In similar sounding, it is designed for College of Architecture and Design students by our 4CADs team made up of prospective Designers and Architects who joined hands in building a website that came about as a class project, but in development evolved into a functional online materials page to assist students in fields like Architecture, Industrial Design, Interior Design, and even more in making thoughtful material selection choices, and getting introduced to a select range of materials that could be used in either class or personal projects. Targetting this service, we've researched a select range of materials which we believe to be appropriate for students starting at any of our three levels of material use and experience. We hope 4CADs serves as an aid for students in becoming more knowledgeable material selectors for the purpose of academic, personal, or even early professional projects.
