--- a/Materials Page/ADVANCED.html
+++ b/Materials Page/ADVANCED.html
@@ -89,8 +89,8 @@
 </div>
 </a>
 
+<a href="/Materials Page/Material Content/Pinewood.html">
 <div class="card" >
-    <a href="/Materials Page/Material Content/Pinewood.html"></a>
     <div class="card-background"  style=" background-image: url('../Images/Plastic.png');"></div>
     <div class="card-content">
         <div class="card-title">PLASTIC</div>
@@ -99,8 +99,10 @@
         </div>
     </div>
 </div>
+</a>
+
+<a href="/Materials Page/Material Content/Pinewood.html">
 <div class="card" >
-    <a href="/Materials Page/Material Content/Pinewood.html"></a>
     <div class="card-background"  style=" background-image: url('../Images/Kevlar.png');"></div>
     <div class="card-content">
         <div class="card-title">KEVLAR</div>
@@ -109,9 +111,10 @@
         </div>
     </div>
 </div>
+</a>
 
+<a href="/Materials Page/Material Content/Pinewood.html">
 <div class="card" >
-    <a href="/Materials Page/Material Content/Pinewood.html"></a>
     <div class="card-background"  style=" background-image: url('../Images/Aerogel.png');"></div>
     <div class="card-content">
         <div class="card-title">AEROGEL</div>
@@ -120,8 +123,10 @@
         </div>
     </div>
 </div>
+</a>
+
+<a href="/Materials Page/Material Content/Pinewood.html">
 <div class="card" >
-    <a href="/Materials Page/Material Content/Pinewood.html"></a>
     <div class="card-background"  style=" background-image: url('../Images/Composites.png');"></div>
     <div class="card-content">
         <div class="card-title">COMPOSITES</div>
@@ -130,8 +135,10 @@
         </div>
     </div>
 </div>
+</a>
+
+<a href="/Materials Page/Material Content/Pinewood.html">
 <div class="card" >
-    <a href="/Materials Page/Material Content/Pinewood.html"></a>
     <div class="card-background"  style=" background-image: url('../Images/Ceramic.png');"></div>
     <div class="card-content">
         <div class="card-title">CERAMIC</div>
@@ -140,9 +147,11 @@
         </div>
     </div>
 </div>
+</a>
 
+
+<a href="/Materials Page/Material Content/Pinewood.html">
 <div class="card" >
-    <a href="/Materials Page/Material Content/Pinewood.html"></a>
     <div class="card-background"  style=" background-image: url('../Images/Self\ healing\ concrete.png');"></div>
     <div class="card-content">
         <div class="card-title">SELF-HEALING CONCRETE</div>
@@ -151,6 +160,7 @@
         </div>
     </div>
 </div>
+</a>
 
 </div>
 
