--- a/Materials Page/INTERMEDIATE.html
+++ b/Materials Page/INTERMEDIATE.html
@@ -78,7 +78,6 @@
 
 <a href="/Materials Page/Material Content/Textile.html">
 <div class="card" >
-    
     <div class="card-background"  style=" background-image: url('../Images/Brick.png');"></div>
     <div class="card-content">
         <div class="card-title">BRICK</div>
@@ -89,8 +88,8 @@
 </div>
 </a>
 
+<a href="/Materials Page/Material Content/Pinewood.html">
 <div class="card" >
-    <a href="/Materials Page/Material Content/Pinewood.html"></a>
     <div class="card-background"  style=" background-image: url('../Images/Glass.png');"></div>
     <div class="card-content">
         <div class="card-title">GLASS</div>
@@ -99,8 +98,9 @@
         </div>
     </div>
 </div>
+</a>
+<a href="/Materials Page/Material Content/Pinewood.html">
 <div class="card" >
-    <a href="/Materials Page/Material Content/Pinewood.html"></a>
     <div class="card-background"  style=" background-image: url('../Images/Plexiglass.png');"></div>
     <div class="card-content">
         <div class="card-title">PLEXIGLASS</div>
@@ -109,9 +109,10 @@
         </div>
     </div>
 </div>
+</a>
 
+<a href="/Materials Page/Material Content/Pinewood.html">
 <div class="card" >
-    <a href="/Materials Page/Material Content/Pinewood.html"></a>
     <div class="card-background"  style=" background-image: url('../Images/Polycarbonate.png');"></div>
     <div class="card-content">
         <div class="card-title">POLYCARBONATE</div>
@@ -120,8 +121,10 @@
         </div>
     </div>
 </div>
+</a>
+
+<a href="/Materials Page/Material Content/Pinewood.html">
 <div class="card" >
-    <a href="/Materials Page/Material Content/Pinewood.html"></a>
     <div class="card-background"  style=" background-image: url('../Images/Plywood.png');"></div>
     <div class="card-content">
         <div class="card-title">PLYWOOD</div>
@@ -130,8 +133,10 @@
         </div>
     </div>
 </div>
+</a>
+
+<a href="/Materials Page/Material Content/Pinewood.html">
 <div class="card" >
-    <a href="/Materials Page/Material Content/Pinewood.html"></a>
     <div class="card-background"  style=" background-image: url('../Images/gypsum.png');"></div>
     <div class="card-content">
         <div class="card-title">GYPSUM</div>
@@ -140,9 +145,11 @@
         </div>
     </div>
 </div>
+</a>
 
+<a href="/Materials Page/Material Content/Pinewood.html">
 <div class="card" >
-    <a href="/Materials Page/Material Content/Pinewood.html"></a>
+    <a href="/Materials Page/Material Content/Pinewood.html">
     <div class="card-background"  style=" background-image: url('../Images/Coroplast.png');"></div>
     <div class="card-content">
         <div class="card-title">COROPLAST</div>
@@ -151,8 +158,9 @@
         </div>
     </div>
 </div>
-
+</a>
 </div>
+
 
 <footer class="navbar"> <!--PROBLEM-->
     <div class="ParaImage">
