--- a/Materials Page/INTERMEDIATE.html
+++ b/Materials Page/INTERMEDIATE.html
@@ -64,7 +64,7 @@
     </style>
 
 <div class="card-container">
-    <a href="/Materials Page/Material Content/Pinewood.html">
+    <a href="/Materials Page/Material Content/CONCRETE.html">
 <div class="card" >
     
     <div class="card-background" style=" background-image: url('../Images/Concrete.png');"></div>
