--- a/Materials Page/INTERMEDIATE.html
+++ b/Materials Page/INTERMEDIATE.html
@@ -76,7 +76,7 @@
     </div>
 </div></a>
 
-<a href="/Materials Page/Material Content/Textile.html">
+<a href="/Materials Page/Material Content/BRICK.html">
 <div class="card" >
     <div class="card-background"  style=" background-image: url('../Images/Brick.png');"></div>
     <div class="card-content">
@@ -88,7 +88,7 @@
 </div>
 </a>
 
-<a href="/Materials Page/Material Content/Pinewood.html">
+<a href="/Materials Page/Material Content/Glass.html">
 <div class="card" >
     <div class="card-background"  style=" background-image: url('../Images/Glass.png');"></div>
     <div class="card-content">
@@ -99,7 +99,7 @@
     </div>
 </div>
 </a>
-<a href="/Materials Page/Material Content/Pinewood.html">
+<a href="/Materials Page/Material Content/PLexiglass.html">
 <div class="card" >
     <div class="card-background"  style=" background-image: url('../Images/Plexiglass.png');"></div>
     <div class="card-content">
