Last Four Advanced Materials
Aerogel, Self-Healing concrete, Composites and Ceramic pages are done.

--- a/Materials Page/ADVANCED.html
+++ b/Materials Page/ADVANCED.html
@@ -113,7 +113,7 @@
 </div>
 </a>
 
-<a href="/Materials Page/Material Content/Pinewood.html">
+<a href="/Materials Page/Material Content/Aerogel.html">
 <div class="card" >
     <div class="card-background"  style=" background-image: url('../Images/Aerogel.png');"></div>
     <div class="card-content">
@@ -125,7 +125,7 @@
 </div>
 </a>
 
-<a href="/Materials Page/Material Content/Pinewood.html">
+<a href="/Materials Page/Material Content/Composites.html">
 <div class="card" >
     <div class="card-background"  style=" background-image: url('../Images/Composites.png');"></div>
     <div class="card-content">
@@ -137,7 +137,7 @@
 </div>
 </a>
 
-<a href="/Materials Page/Material Content/Pinewood.html">
+<a href="/Materials Page/Material Content/ceramic.html">
 <div class="card" >
     <div class="card-background"  style=" background-image: url('../Images/Ceramic.png');"></div>
     <div class="card-content">
@@ -150,7 +150,7 @@
 </a>
 
 
-<a href="/Materials Page/Material Content/Pinewood.html">
+<a href="/Materials Page/Material Content/Self-Healing Concrete.html">
 <div class="card" >
     <div class="card-background"  style=" background-image: url('../Images/Self\ healing\ concrete.png');"></div>
     <div class="card-content">
