--- a/Materials Page/Material Content/RUBBER.html
+++ b/Materials Page/Material Content/RUBBER.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Textile</title>
+    <title>Rubber</title>
     <link rel="stylesheet" href="RUBBER.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" 
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -91,10 +91,10 @@
                                 </p>
                                 <!-- Application Images -->
                                 <div class="d-flex justify-content-center flex-wrap gap-3 mt-3">
-                                    <img src="/Images/Textile Application 1.png" alt="Application Example 1" class="img-fluid border border-dark border-1 rounded" style="max-width: 20%;">
-                                    <img src="/Images/Textile Application 2.png" alt="Application Example 2" class="img-fluid border border-dark border-1 rounded" style="max-width: 20%;">
-                                    <img src="/Images/Textile Application 3.png" alt="Application Example 3" class="img-fluid border border-dark border-1 rounded" style="max-width: 20%;">
-                                    <img src="/Images/Textile Application 4.png" class="img-fluid border border-dark border-1 rounded" style="max-width: 20%;">
+                                    <img src="/Images/RubberApplication1.jpeg" alt="Application Example 1" class="img-fluid border border-dark border-1 rounded" style="max-width: 20%;">
+                                    <img src="/Images/Rubber Application 2.jpeg" alt="Application Example 2" class="img-fluid border border-dark border-1 rounded" style="max-width: 20%;">
+                                    <img src="/Images/Rubber Application 3.jpg" alt="Application Example 3" class="img-fluid border border-dark border-1 rounded" style="max-width: 20%;">
+                                    <img src="/Images/Rubber Application 4.jpg" class="img-fluid border border-dark border-1 rounded" style="max-width: 20%;">
                                 </div>
                                      
                             </div>
