--- a/Materials Page/ADVANCED.html
+++ b/Materials Page/ADVANCED.html
@@ -64,50 +64,50 @@
     </style>
 
 <div class="card-container">
-    <a href="/Materials Page/Material Content/Pinewood.html">
+    <a href="/Materials Page/Material Content/STEEL.html">
 <div class="card" >
     
     <div class="card-background" style=" background-image: url('../Images/Steel.png');"></div>
     <div class="card-content">
         <div class="card-title">STEEL</div>
         <div class="card-description" style="display: flex; font-size:medium; align-items: center; justify-content: center;">
-            Lightweight, Soft, Thermal insulator
+            Strong, Durable, Recyclable
         </div>
     </div>
 </div></a>
 
-<a href="/Materials Page/Material Content/Textile.html">
+<a href="/Materials Page/Material Content/STONE.html">
 <div class="card" >
     
     <div class="card-background"  style=" background-image: url('../Images/Stone.png');"></div>
     <div class="card-content">
         <div class="card-title">STONE</div>
         <div class="card-description">
-            Flexibility, Durability, Water-Resistant
+            Durable, Natural, Heavy
         </div>
     </div>
 </div>
 </a>
 
-<a href="/Materials Page/Material Content/Pinewood.html">
+<a href="/Materials Page/Material Content/PLASTIC.html">
 <div class="card" >
     <div class="card-background"  style=" background-image: url('../Images/Plastic.png');"></div>
     <div class="card-content">
         <div class="card-title">PLASTIC</div>
         <div class="card-description">
-            Learn about the properties and uses of pinewood materials.
+            Versatile, Lightweight, Moldable
         </div>
     </div>
 </div>
 </a>
 
-<a href="/Materials Page/Material Content/Pinewood.html">
+<a href="/Materials Page/Material Content/KEVLAR.html">
 <div class="card" >
     <div class="card-background"  style=" background-image: url('../Images/Kevlar.png');"></div>
     <div class="card-content">
         <div class="card-title">KEVLAR</div>
         <div class="card-description">
-            Learn about the properties and uses of pinewood materials.
+            Strong, Lightweight, Heat-resistant
         </div>
     </div>
 </div>
