--- a/Materials Page/BEGINNER.html
+++ b/Materials Page/BEGINNER.html
@@ -97,7 +97,7 @@
         <div class="card-content">
             <div class="card-title">RUBBER</div>
             <div class="card-description">
-                Flexibility, Durability, Water-Resistant
+                Flexible, Durable, Elastic
             </div>
         </div>
     </div>
@@ -110,7 +110,7 @@
     <div class="card-content">
         <div class="card-title">CARDBOARD</div>
         <div class="card-description">
-            Flexibility, Durability, Water-Resistant
+            Lightweight, Recyclable, Versatile
         </div>
     </div>
 </div>
@@ -123,7 +123,7 @@
     <div class="card-content">
         <div class="card-title">BAMBOO</div>
         <div class="card-description">
-            Flexibility, Durability, Water-Resistant
+            Renewable, Strong, Sustainable
         </div>
     </div>
 </div>
@@ -136,7 +136,7 @@
     <div class="card-content">
         <div class="card-title">CORK</div>
         <div class="card-description">
-            Flexibility, Durability, Water-Resistant
+            Lightweight, Insulating, Buoyant
         </div>
     </div>
 </div>
@@ -149,7 +149,7 @@
     <div class="card-content">
         <div class="card-title">CLAY</div>
         <div class="card-description">
-            Flexibility, Durability, Water-Resistant
+            Malleable, Durable, Earthen
         </div>
     </div>
 </div>
@@ -162,7 +162,7 @@
     <div class="card-content">
         <div class="card-title">BASSWOOD</div>
         <div class="card-description">
-            Flexibility, Durability, Water-Resistant
+            Lightweight, Smooth, Carvable
         </div>
     </div>
 </div>
