--- a/Materials Page/INTERMEDIATE.html
+++ b/Materials Page/INTERMEDIATE.html
@@ -117,43 +117,43 @@
     <div class="card-content">
         <div class="card-title">POLYCARBONATE</div>
         <div class="card-description">
-            Learn about the properties and uses of pinewood materials.
+            Transparent, Tough, Thermoformable
         </div>
     </div>
 </div>
 </a>
 
-<a href="/Materials Page/Material Content/Pinewood.html">
+<a href="/Materials Page/Material Content/PLYWOOD.html">
 <div class="card" >
     <div class="card-background"  style=" background-image: url('../Images/Plywood.png');"></div>
     <div class="card-content">
         <div class="card-title">PLYWOOD</div>
         <div class="card-description">
-            Learn about the properties and uses of pinewood materials.
+            Durable, Layered, Versatile
         </div>
     </div>
 </div>
 </a>
 
-<a href="/Materials Page/Material Content/Pinewood.html">
+<a href="/Materials Page/Material Content/GYPSUM.html">
 <div class="card" >
     <div class="card-background"  style=" background-image: url('../Images/gypsum.png');"></div>
     <div class="card-content">
         <div class="card-title">GYPSUM</div>
         <div class="card-description">
-            Learn about the properties and uses of pinewood materials.
+            Lightweight, Fire-resistant, Fragile
         </div>
     </div>
 </div>
 </a>
 
-<a href="/Materials Page/Material Content/Pinewood.html">
+<a href="/Materials Page/Material Content/COROPLAST.html">
 <div class="card" >
     <div class="card-background"  style=" background-image: url('../Images/Coroplast.png');"></div>
     <div class="card-content">
         <div class="card-title">COROPLAST</div>
         <div class="card-description">
-            Learn about the properties and uses of pinewood materials.
+            Lightweight, Weatherproof, Durable
         </div>
     </div>
 </div>
