--- a/Materials Page/Material Content/CLAY.html
+++ b/Materials Page/Material Content/CLAY.html
@@ -100,10 +100,10 @@
                                 </p>
                                 <!-- Application Images -->
                                 <div class="d-flex justify-content-center flex-wrap gap-3 mt-3">
-                                    <img src="/Images/Textile Application 1.png" alt="Application Example 1" class="img-fluid border border-dark border-1 rounded" style="max-width: 20%;">
-                                    <img src="/Images/Textile Application 2.png" alt="Application Example 2" class="img-fluid border border-dark border-1 rounded" style="max-width: 20%;">
-                                    <img src="/Images/Textile Application 3.png" alt="Application Example 3" class="img-fluid border border-dark border-1 rounded" style="max-width: 20%;">
-                                    <img src="/Images/Textile Application 4.png" class="img-fluid border border-dark border-1 rounded" style="max-width: 20%;">
+                                    <img src="/Images/Clay Application 1.jpg" alt="Application Example 1" class="img-fluid border border-dark border-1 rounded" style="max-width: 20%;">
+                                    <img src="/Images/Clay Application 2.jpeg" alt="Application Example 2" class="img-fluid border border-dark border-1 rounded" style="max-width: 20%;">
+                                    <img src="/Images/Clay Application 3.jpg" alt="Application Example 3" class="img-fluid border border-dark border-1 rounded" style="max-width: 20%;">
+                                    <img src="/Images/Clay Application 4.jpg" class="img-fluid border border-dark border-1 rounded" style="max-width: 20%;">
                                 </div>
                                      
                             </div>
