--- a/Materials Page/INTERMEDIATE.html
+++ b/Materials Page/INTERMEDIATE.html
@@ -71,7 +71,7 @@
     <div class="card-content">
         <div class="card-title">CONCRETE</div>
         <div class="card-description" style="display: flex; font-size:medium; align-items: center; justify-content: center;">
-            Lightweight, Soft, Thermal insulator
+            Workability, Durability, Permeability.
         </div>
     </div>
 </div></a>
@@ -82,7 +82,7 @@
     <div class="card-content">
         <div class="card-title">BRICK</div>
         <div class="card-description">
-            Flexibility, Durability, Water-Resistant
+            Sound Insulation, Water Resistance, Fire Resistance.
         </div>
     </div>
 </div>
@@ -94,7 +94,7 @@
     <div class="card-content">
         <div class="card-title">GLASS</div>
         <div class="card-description">
-            Learn about the properties and uses of pinewood materials.
+            Transprency, Recyclability, Waterproof.
         </div>
     </div>
 </div>
@@ -105,7 +105,7 @@
     <div class="card-content">
         <div class="card-title">PLEXIGLASS</div>
         <div class="card-description">
-            Learn about the properties and uses of pinewood materials.
+            Impact Resistance, Flexibility, Lightweight.
         </div>
     </div>
 </div>
