Bottom 4 Advanced page

--- a/Materials Page/ADVANCED.html
+++ b/Materials Page/ADVANCED.html
@@ -119,7 +119,7 @@
     <div class="card-content">
         <div class="card-title">AEROGEL</div>
         <div class="card-description">
-            Learn about the properties and uses of pinewood materials.
+            Lightweight, Insulating, Porous
         </div>
     </div>
 </div>
@@ -131,7 +131,7 @@
     <div class="card-content">
         <div class="card-title">COMPOSITES</div>
         <div class="card-description">
-            Learn about the properties and uses of pinewood materials.
+            Versatile, Durable, Hybrid
         </div>
     </div>
 </div>
@@ -143,7 +143,7 @@
     <div class="card-content">
         <div class="card-title">CERAMIC</div>
         <div class="card-description">
-            Learn about the properties and uses of pinewood materials.
+            Strong, Heat-resistant, Fragile
         </div>
     </div>
 </div>
@@ -156,7 +156,7 @@
     <div class="card-content">
         <div class="card-title">SELF-HEALING CONCRETE</div>
         <div class="card-description">
-            Learn about the properties and uses of pinewood materials.
+            Innovative, Resilient, Sustainable
         </div>
     </div>
 </div>
