--- a/Materials Page/Material Content/PLexiglass.html
+++ b/Materials Page/Material Content/PLexiglass.html
@@ -58,7 +58,7 @@
             
             <div class="row my 5-g g-5 align-items-center">
                 <div class="col-6 col-lg-4.5 mt-5">
-                    <img src="/Images/Pinewood.png" class="img-fluid border border-dark border-1" alt="ebook" style="border: 0px; border-radius: 15px; width: 600px; height: 600px;">
+                    <img src="/Images/Plexiglass.png" class="img-fluid border border-dark border-1" alt="ebook" style="border: 0px; border-radius: 15px; width: 600px; height: 600px;">
                 </div>
                 
                 <div class="col-lg-6">
